# cal.lat

./: .gitignore  Cargo.toml  callat.md  metadata.json
api/: callat:template.os-v0.wit
callat/: Cargo.toml
callat/src/: frontend.rs  geocity.rs  lib.rs  state.rs
pkg/: 10cities.json  manifest.json
pkg/ui/: index.html
pkg/ui/assets/: index-4g7rwNDu.css  index-BQNKkHeV.js  index-CWytB9Zy.css  index-iWzfl8BH.js  index-xDrFEh9t.js
test/: tests.toml
test/callat_test/: Cargo.toml  metadata.json
test/callat_test/api/: callat_test:template.os-v0.wit
test/callat_test/callat_test/: Cargo.toml
test/callat_test/callat_test/src/: lib.rs
test/callat_test/pkg/: manifest.json
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: index.css  main.tsx
ui/src/components/: CalendarView.tsx  DateSlider.tsx  FriendList.tsx  Layout.tsx  MapView.tsx  NewLocation.tsx  Sidebar.tsx
ui/src/pages/: Home.tsx
ui/src/store/: index.ts
